tests/parser/should_fail/SuffixAtFail.stderr

SuffixAtFail.hs:3:6: error: [GHC-33856]
    The symbol '@' occurs as a suffix.
    For an as-pattern, there must not be any whitespace surrounding '@'.
  |
3 | foo x@    () = ()
  |      ^^^^^
